worker-macros/tests/ui/fetch-not-async.stderr
error: custom attribute panicked
 --> tests/ui/fetch-not-async.rs:3:1
  |
3 | #[event(fetch)]
  | ^^^^^^^^^^^^^^^
  |
  = help: message: the `fetch` handler must be an async function
